--- a/app/src/main/res/layout/character_creator_page_one.xml
+++ b/app/src/main/res/layout/character_creator_page_one.xml
@@ -67,8 +67,8 @@
         android:id="@+id/character_creator_page_one_view_character_demo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="388dp"
-        android:layout_marginEnd="28dp"
+        android:layout_marginTop="436dp"
+        android:layout_marginEnd="24dp"
         android:text="View Character!"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -77,150 +77,149 @@
         android:id="@+id/character_creator_page_one_strength_display_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:text="STR"
         android:textAlignment="center"
         android:textSize="22sp"
+        app:layout_constraintBottom_toTopOf="@id/spacer1"
         app:layout_constraintEnd_toEndOf="@+id/character_creator_page_one_edit_strength"
-        app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_strength"
-        app:layout_constraintTop_toBottomOf="@+id/character_creator_page_one_edit_subrace" />
-
-    <EditText
-        android:id="@+id/character_creator_page_one_edit_intelligence"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="180dp"
-        android:ems="10"
-        android:inputType="number"
-        android:textAlignment="center"
-        app:layout_constraintStart_toStartOf="@id/spacer"
-        app:layout_constraintTop_toBottomOf="@+id/character_creator_page_one_intelligence_display_text" />
+        app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_strength" />
 
     <TextView
         android:id="@+id/character_creator_page_one_intelligence_display_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
         android:text="INT"
         android:textAlignment="center"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="@+id/character_creator_page_one_edit_intelligence"
-        app:layout_constraintHorizontal_bias="0.466"
         app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_intelligence"
-        app:layout_constraintTop_toBottomOf="@+id/character_creator_page_one_edit_strength" />
-
-    <TextView
-        android:id="@+id/character_creator_page_one_dexterity_display_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:text="DEX"
-        android:textAlignment="center"
-        android:textSize="22sp"
-        app:layout_constraintEnd_toEndOf="@+id/character_creator_page_one_edit_dexterity"
-        app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_dexterity"
-        app:layout_constraintTop_toBottomOf="@+id/character_creator_page_one_edit_class" />
-
-    <TextView
-        android:id="@+id/character_creator_page_one_constitution_display_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:text="CON"
-        android:textAlignment="center"
-        android:textSize="22sp"
-        app:layout_constraintEnd_toEndOf="@+id/character_creator_page_one_edit_constitution"
-        app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_constitution"
-        app:layout_constraintTop_toBottomOf="@+id/character_creator_page_one_edit_class" />
-
-    <EditText
-        android:id="@+id/character_creator_page_one_edit_strength"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="240dp"
-        android:ems="10"
-        android:inputType="number"
-        android:textAlignment="center"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/character_creator_page_one_edit_dexterity"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="240dp"
-        android:layout_marginTop="240dp"
-        android:ems="10"
-        android:inputType="number"
-        android:textAlignment="center"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/character_creator_page_one_edit_constitution"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="300dp"
-        android:layout_marginTop="240dp"
-        android:ems="10"
-        android:inputType="number"
-        android:textAlignment="center"
-        app:layout_constraintStart_toStartOf="@id/spacer"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/character_creator_page_one_edit_wisdom"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="8dp"
-        android:ems="10"
-        android:inputType="number"
-        android:textAlignment="center"
-        app:layout_constraintStart_toEndOf="@+id/character_creator_page_one_edit_intelligence"
-        app:layout_constraintTop_toBottomOf="@+id/character_creator_page_one_wisdom_display_text" />
+        app:layout_constraintTop_toBottomOf="@id/spacer2" />
 
     <TextView
         android:id="@+id/character_creator_page_one_wisdom_display_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
         android:text="WIS"
         android:textAlignment="center"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="@+id/character_creator_page_one_edit_wisdom"
         app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_wisdom"
-        app:layout_constraintTop_toBottomOf="@+id/character_creator_page_one_edit_dexterity" />
-
-    <EditText
-        android:id="@+id/character_creator_page_one_edit_charisma"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="12dp"
-        android:ems="10"
-        android:inputType="number"
-        android:textAlignment="center"
-        app:layout_constraintStart_toEndOf="@+id/character_creator_page_one_edit_wisdom"
-        app:layout_constraintTop_toBottomOf="@+id/character_creator_page_one_charisma_display_text" />
+        app:layout_constraintTop_toBottomOf="@id/spacer2" />
 
     <TextView
         android:id="@+id/character_creator_page_one_charisma_display_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
         android:text="CHA"
         android:textAlignment="center"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="@+id/character_creator_page_one_edit_charisma"
         app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_charisma"
-        app:layout_constraintTop_toBottomOf="@id/character_creator_page_one_edit_constitution" />
+        app:layout_constraintTop_toBottomOf="@id/spacer2" />
+
+    <TextView
+        android:id="@+id/character_creator_page_one_dexterity_display_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="DEX"
+        android:textAlignment="center"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toTopOf="@id/spacer1"
+        app:layout_constraintEnd_toEndOf="@+id/character_creator_page_one_edit_dexterity"
+        app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_dexterity" />
+
+    <TextView
+        android:id="@+id/character_creator_page_one_constitution_display_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CON"
+        android:textAlignment="center"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toTopOf="@id/spacer1"
+        app:layout_constraintEnd_toEndOf="@+id/character_creator_page_one_edit_constitution"
+        app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_constitution" />
+
+    <EditText
+        android:id="@+id/character_creator_page_one_edit_strength"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="200dp"
+        android:ems="10"
+        android:inputType="number"
+        android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="@id/spacer1"
+        app:layout_constraintTop_toTopOf="@id/spacer1" />
+
+    <EditText
+        android:id="@+id/character_creator_page_one_edit_intelligence"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="200dp"
+        android:ems="10"
+        android:inputType="number"
+        android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="@id/spacer1"
+        app:layout_constraintTop_toBottomOf="@id/character_creator_page_one_intelligence_display_text" />
+
+    <EditText
+        android:id="@+id/character_creator_page_one_edit_wisdom"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="20dp"
+        android:ems="10"
+        android:inputType="number"
+        android:textAlignment="center"
+        app:layout_constraintStart_toEndOf="@id/character_creator_page_one_edit_intelligence"
+        app:layout_constraintTop_toBottomOf="@id/character_creator_page_one_wisdom_display_text" />
+
+    <EditText
+        android:id="@+id/character_creator_page_one_edit_charisma"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="20dp"
+        android:ems="10"
+        android:inputType="number"
+        android:textAlignment="center"
+        app:layout_constraintStart_toEndOf="@id/character_creator_page_one_edit_wisdom"
+        app:layout_constraintTop_toBottomOf="@id/character_creator_page_one_charisma_display_text" />
+
+    <EditText
+        android:id="@+id/character_creator_page_one_edit_dexterity"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="20dp"
+        android:ems="10"
+        android:inputType="number"
+        android:textAlignment="center"
+        app:layout_constraintStart_toEndOf="@id/character_creator_page_one_edit_strength"
+        app:layout_constraintTop_toTopOf="@id/character_creator_page_one_edit_strength" />
+
+    <EditText
+        android:id="@+id/character_creator_page_one_edit_constitution"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="20dp"
+        android:ems="10"
+        android:inputType="number"
+        android:textAlignment="center"
+        app:layout_constraintStart_toEndOf="@id/character_creator_page_one_edit_dexterity"
+        app:layout_constraintTop_toTopOf="@id/character_creator_page_one_edit_dexterity" />
 
     <Space
-        android:id="@+id/spacer"
-        android:layout_width="180dp"
-        android:layout_height="100dp"
+        android:id="@+id/spacer1"
+        android:layout_width="200dp"
+        android:layout_height="160dp"
         android:layout_marginTop="240dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Space
+        android:id="@+id/spacer2"
+        android:layout_width="190dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="200dp"
+        app:layout_constraintStart_toEndOf="@id/spacer1"
+        app:layout_constraintStart_toStartOf="@id/spacer1"
+        app:layout_constraintTop_toBottomOf="@id/character_creator_page_one_edit_strength" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
