--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -11,58 +11,66 @@
         android:layout_height="match_parent"
         android:padding="38dp">
 
-        <Button
+        <ImageView
             android:id="@+id/main_menu_view_characters"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/Character"
-            app:layout_constraintBottom_toBottomOf="@+id/main_menu_view_data"
+            android:layout_width="318dp"
+            android:layout_height="145dp"
+            android:background="#205D6B"
+            android:contentDescription="veiw characters"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.494"
+            app:layout_constraintHorizontal_bias="0.823"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.26"
+            tools:srcCompat="@drawable/download_removebg_preview" />
 
-        <Button
+        <ImageView
             android:id="@+id/main_menu_view_data"
-            android:layout_width="127dp"
-            android:layout_height="48dp"
-            android:layout_marginTop="68dp"
-            android:text="@string/fourth_message"
+            android:layout_width="305dp"
+            android:layout_height="157dp"
+            android:layout_marginTop="388dp"
+            android:background="#3A1C68"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.566"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@drawable/download__2__removebg_preview" />
 
-        <Button
+        <ImageView
             android:id="@+id/main_menu_help_page"
-            android:layout_width="111dp"
-            android:layout_height="55dp"
-            android:layout_marginTop="148dp"
-            android:text="@string/help_message"
+            android:layout_width="97dp"
+            android:layout_height="75dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.663"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@drawable/help_button_1701468_960_720" />
 
-        <Button
+        <ImageView
             android:id="@+id/main_menu_view_d_m_menu"
-            android:layout_width="111dp"
-            android:layout_height="55dp"
-            android:layout_marginTop="224dp"
-            android:text="@string/fifth_message"
+            android:layout_width="310dp"
+            android:layout_height="137dp"
+            android:background="#8E0C0C"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.491"
+            app:layout_constraintHorizontal_bias="0.68"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.61"
+            tools:srcCompat="@drawable/backgrounda_removed_info" />
 
-        <Button
+        <ImageView
             android:id="@+id/main_menu_settings"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="Settings"
+            android:layout_width="85dp"
+            android:layout_height="78dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/main_menu_view_d_m_menu" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            tools:srcCompat="@drawable/download" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
