--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -11,66 +11,87 @@
         android:layout_height="match_parent"
         android:padding="38dp">
 
-        <ImageView
+        <Button
             android:id="@+id/main_menu_view_characters"
-            android:layout_width="318dp"
-            android:layout_height="145dp"
-            android:background="#205D6B"
-            android:contentDescription="veiw characters"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="343dp"
+            android:layout_height="173dp"
+            android:layout_marginTop="96dp"
+            android:backgroundTint="#FF0000"
+            android:text="Character⚔️"
+            android:textColor="#FFFFFF"
+            app:cornerRadius="0dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.823"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.26"
-            tools:srcCompat="@drawable/download_removebg_preview" />
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
+        <Button
             android:id="@+id/main_menu_view_data"
-            android:layout_width="305dp"
-            android:layout_height="157dp"
-            android:layout_marginTop="388dp"
-            android:background="#3A1C68"
+            android:layout_width="341dp"
+            android:layout_height="167dp"
+            android:layout_marginTop="492dp"
+            android:backgroundTint="#25681C"
+            android:text="Information 📖"
+            app:cornerRadius="0dp"
+            android:textColor="#FFFFFF"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.566"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@drawable/download__2__removebg_preview" />
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
+        <Button
             android:id="@+id/main_menu_help_page"
-            android:layout_width="97dp"
-            android:layout_height="75dp"
+            android:layout_width="85dp"
+            android:layout_height="78dp"
+            android:backgroundTint="#FFEB3B"
+            android:text=" ? "
+            android:textColor="#000000"
+            app:cornerRadius="0dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.663"
+            app:layout_constraintHorizontal_bias="0.548"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@drawable/help_button_1701468_960_720" />
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
+        <Button
             android:id="@+id/main_menu_view_d_m_menu"
-            android:layout_width="310dp"
-            android:layout_height="137dp"
-            android:background="#8E0C0C"
+            android:layout_width="332dp"
+            android:layout_height="183dp"
+            android:backgroundTint="#1541AF"
+            android:text="Dungeon Master Menu 🎲"
+            android:textColor="#FFFFFF"
+            app:cornerRadius="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.68"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.61"
-            tools:srcCompat="@drawable/backgrounda_removed_info" />
+            app:layout_constraintVertical_bias="0.61" />
 
-        <ImageView
+        <Button
             android:id="@+id/main_menu_settings"
-            android:layout_width="85dp"
+            android:layout_width="96dp"
             android:layout_height="78dp"
+            android:backgroundTint="#4B4A4A"
+            android:text="⚙️ "
+            app:cornerRadius="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.97"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            tools:srcCompat="@drawable/download" />
+            app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/Title"
+            android:layout_width="123dp"
+            android:layout_height="72dp"
+            android:layout_marginTop="12dp"
+            android:text="5e Manager"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
